package edu.fiuba.algo3.modelo;

public interface Finalizador {
    void finalizar();
}
