package edu.fiuba.algo3.modelo;

public class Jugando extends EstadoJuego {
    public boolean determinarContinuidadEjecucion(){ return true; }

    public void finalizar(){};
}
