package edu.fiuba.algo3.modelo;

public class Lesion extends Obstaculo{
    @Override
    public void obstaculizar(Gladiador gladiador, Equipamiento equipamiento) {
        //gladiador.cambiarEstado(new Lesionado());
    }
}
