package edu.fiuba.algo3.modelo;

public abstract class Obstaculo{

    public abstract void obstaculizar(Gladiador gladiador);
}
