package edu.fiuba.algo3.modelo;

public class ObstaculoNulo extends Obstaculo{

    @Override
    public void obstaculizar(Gladiador gladiador, Equipamiento equipamiento) {}
}
