package edu.fiuba.algo3.modelo;

public class Pompeya extends Premio{
    @Override
    public void premiar(Gladiador gladiador){
        gladiador.llegarPompeya();
    }
}
