package edu.fiuba.algo3.modelo;

public abstract class Premio{

    public abstract void premiar(Gladiador gladiador);
}
