package edu.fiuba.algo3.modelo;

public class PremioNulo extends Premio{

    @Override
    public void premiar(Gladiador gladiador){}
}
